# claude_playground

./: .gitignore  CLAUDE.md  employees_sql.py  file_renaming.py  hello_loop.py  is_prime.js  reverse_string.py
11_workout_dashboard/: index.html  package-lock.json  package.json
11_workout_dashboard/prd/: workout-dashboard-prd.md
11_workout_dashboard/public/: hevy-export.csv
11_workout_dashboard/src/: App.jsx
11_workout_dashboard/src/components/: CalendarHeatmap.jsx  Dashboard.jsx  DurationChart.jsx  ExerciseAnalytics.jsx  PersonalRecords.jsx  StatsOverview.jsx  StrengthProgress.jsx  TimeInsights.jsx  VolumeChart.jsx
11_workout_dashboard/src/utils/: dataProcessor.js
12_django_uv/: pyproject.toml
12_django_uv/src/django_uv/: __init__.py
14_us_map_uv_django/: convert_geojson_to_svg.py  main.py  pyproject.toml
14_us_map_uv_django/config/: settings.py
14_us_map_uv_django/quiz/: views.py
15_simple_form/: form.html
16_daily_challenge/: AGENTS.md
16_daily_challenge/frontend/: README.md  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
17_kanban/: CLAUDE.md
17_kanban/frontend/: package-lock.json  package.json  playwright.config.ts
1_hello_world/: hello_world.py
2_hello_fibonacci/: hello_fibonacci.py
3_hello_loop/: hello_loop.py
4_reverse_string/: reverse_string.py
6_file_renaming/: file_renaming.py
7_tic_tac_toe_streamlit/: tic_tac_toe.py
8_tic_tac_toe_js/: index.html  script.js  styles.css
9_sudoku_game/: game.js  index.html  styles.css  sudoku.js
django_uv/django_project/: settings.py
(+27 files in other folders)
