[project]
name = "django-uv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Kapil Goenka", email = "kapil.goenka@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "django>=5.2.7",
]

[project.scripts]
django-uv = "django_uv:main"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "django-debug-toolbar>=6.1.0",
]
prod = [
    "gunicorn>=23.0.0",
]
